@@ -1,3 +1,13 @@
+2015-01-18  Alexey Proskuryakov  <ap@apple.com>
+
+        build.webkit.org/dashboard: OS X EWS is now on Mavericks
+        https://bugs.webkit.org/show_bug.cgi?id=140595
+
+        Reviewed by Csaba Osztrogonác.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/BubbleQueueServer.js:
+        (BubbleQueueServer):
+
 2015-01-17  David Kilzer  <ddkilzer@apple.com>
 
         Attempt to fix webkitpy tests on Mountain Lion, Mavericks bots
